SQuirreL SQL Client Change Log
==============================

Not yet released - available from CVS or in the latest snapshot:
----------------------------------------------------------------

Enhancements:

New editor component: RSyntaxTextArea by fifesoft.com.
 New features:
  - No long line problems
  - Enhanced search functions:
      shift F3: Find selected.
      F3: Repeat last find.
      control shift F3: Mark selected.
      escape: Unmark all.
  - Line numbers can be displayed
  - Current line can be highlighted
  Note: On MS-Windows systems the Java-VM parameter -Dsun.java2d.noddraw=true must be set in your SQUirreL start batch to prevent performance problems. 


 - New Polish translation available (Thanks to Miron Sadziak)

Better table header rendering for MAC OS
  Thanks for Brian Mauter's Patch (ID 2856103)

Feature request 2826175:
  Number of rows read is now visible on message panel and results tab.

Feature request 1656320:
  Background Color Configuration is now available via a new tab ("Color Properties") in Alias 
  Properties dialog.  

MySQL Plugin
  Fixed object tree menu items:
   * Create database (on root node)
   * Drop database (on catalog nodes)
   * Rename (on table nodes)

SQL Scripts Plugin:
 New checkbox 'Use double quotes (") for qualifying' in global scripting preferences. 

Feature Request #2818444:  Oracle: Connecting as SYS not possible - now it is possible to add the necessary 
driver property to connect as SYS, or any other account that needs to connect as SYSDBA.

Look & Feel Plugin
 - Better support for Nimbus: No horizontal scrollbars on pop up lists (e.g. code completion) 

Oracle Plugin
 - SQL*Loader control file generation.
   Adds a new right mouse menu item to tables in the object tree: "Generate SQL*Loader control file"
   Thanks to José David Moreno Juárez for the patch (Patch ID 2776344)

About dialog now has a clickable link to our home page.
 - Thanks to Hashim Kubba for this patch (ID 2104309)

