@@ -39,7 +39,7 @@ TablePopupMenu.copyasinstatement=Copy as SQL IN statement
 TablePopupMenu.copyaswherestatement=Copy as SQL WHERE statement
 TablePopupMenu.copyasupdatestatement=Copy as SQL UPDATE-SET statement
 TablePopupMenu.copyasinsertstatement=Copy as SQL INSERT-VALUES statement
-TablePopupMenu.export=Export CSV / MS Excel ...
+TablePopupMenu.export=Export CSV / MS Excel / XML ...
 TablePopupMenu.cut=Cut
 TablePopupMenu.makeeditable=Make Editable
 TablePopupMenu.undomakeeditable=Undo Make Editable
