@@ -11,7 +11,7 @@ TableCopyHtmlCommand.error.flavors=Encountered an exception while attempting to 
 TileInternalFramesAction.title=Tile
 
 TableExportCsvDlg.defaultLabel=Default
-TableExportCSVDlg.exportTitleNew=CSV / MS Excel export
+TableExportCSVDlg.exportTitleNew=CSV / MS Excel / XML export
 TableExportCsvDlg.exportCsvFile=Export to file:
 TableExportCsvDlg.columnSeparator=Column Separator:
 TableExportCsvDlg.lineSeparatorLabel=Line Separator:
@@ -44,5 +44,6 @@ TableExportCsvDlg.useDefaultFormating=Use default formatting
 
 TableExportCsvDlg.formatCSV=Export CSV file
 TableExportCsvDlg.formatXLS=Export MS Excel (XLS) file
+TableExportCsvDlg.formatXML=Export XML file
 
 TableExportCsvDlg.useGlobalPrefsFormatingExcel=Use formatting as configured in Global Prefs (recommended for MS Excel)
